--- a/src/blocks/modules/select/select.scss
+++ b/src/blocks/modules/select/select.scss
@@ -48,7 +48,7 @@
         border-radius: 5px;
         box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2);
         opacity: 0;
-        min-width: 184px;
+        min-width: 185px;
         padding: 8px 0;
 
         &.show {
@@ -60,14 +60,6 @@
 
         li {
             position: relative;
-            padding: 6px 40px 10px 40px;
-            font-size: rem(16);
-            font-weight: $font-weight-light;
-            line-height: 1.25;
-            color: $text-black;
-            &:hover {
-                background-color: $silver-light;
-            }
             &.selected.active {
                 &:before {
                     content: '';
@@ -76,9 +68,21 @@
                     left: 8px;
                     width: 24px;
                     height: 24px;
-                    background-image: url("data:image/svg+xml,%3Csvg width='24px' height='24px' viewBox='0 0 24 24' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='desktop-tech-date-dropdown' transform='translate(-72.000000, -118.000000)'%3E%3Cg id='icon/M/ok/light' transform='translate(72.000000, 118.000000)'%3E%3Cg id='icon'%3E%3Cg id='Group'%3E%3Crect id='Rectangle' x='0' y='0' width='24' height='24'%3E%3C/rect%3E%3Cpolyline id='Path' stroke='%231A1A1A' stroke-width='2' points='5 12 9 16 19 6'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+                    background-image: url('data:image/svg+xml,%3Csvg width=\'24px\' height=\'24px\' viewBox=\'0 0 24 24\' version=\'1.1\' xmlns=\'http://www.w3.org/2000/svg\' xmlns:xlink=\'http://www.w3.org/1999/xlink\'%3E%3Cg id=\'Page-1\' stroke=\'none\' stroke-width=\'1\' fill=\'none\' fill-rule=\'evenodd\'%3E%3Cg id=\'desktop-tech-date-dropdown\' transform=\'translate(-72.000000, -118.000000)\'%3E%3Cg id=\'icon/M/ok/light\' transform=\'translate(72.000000, 118.000000)\'%3E%3Cg id=\'icon\'%3E%3Cg id=\'Group\'%3E%3Crect id=\'Rectangle\' x=\'0\' y=\'0\' width=\'24\' height=\'24\'%3E%3C/rect%3E%3Cpolyline id=\'Path\' stroke=\'%231A1A1A\' stroke-width=\'2\' points=\'5 12 9 16 19 6\'%3E%3C/polyline%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
                     background-position: center;
                     background-size: contain;
+                }
+            }
+
+            a {
+                display: block;
+                padding: 6px 8px 10px 40px;
+                font-size: rem(16);
+                font-weight: $font-weight-light;
+                line-height: 1.25;
+                color: $text-black;
+                &:hover {
+                    background-color: $silver-light;
                 }
             }
         }
