--- a/src/blocks/modules/dataselect/dataselect.scss
+++ b/src/blocks/modules/dataselect/dataselect.scss
@@ -15,6 +15,7 @@
         line-height: 1.25;
         letter-spacing: normal;
         color: $text-black;
+        will-change:auto;
 
         &:after {
             content: '';
@@ -69,7 +70,7 @@
     &__dropdown {
         display: none;
         position: absolute;
-        z-index: 10;
+        z-index: 0;
         top: calc(100% + 8px);
         left: 0;
         width: 320px;
@@ -77,9 +78,12 @@
         border-radius: 5px;
         box-shadow: 0 8px 40px 0 rgba(0, 0, 0, 0.2);
         opacity: 0;
+        will-change:opacity;
         &.show {
             display: block;
             opacity: 1;
+            z-index: 10;
+            will-change:opacity;
         }
 
         .datepicker {
