--- a/src/styles/pages/main-page.scss
+++ b/src/styles/pages/main-page.scss
@@ -22,6 +22,11 @@
             width: auto;
             max-width: 100vw;
         }
+        @media(max-width:767px) {
+            margin-left: -16px;
+            margin-right: -16px;
+            overflow: hidden;
+        }
     }
 
     .news__row .news-slider {
@@ -45,6 +50,9 @@
             max-width: 100vw;
         }
         .swiper-slide {
+            .card {
+                border: none;
+            }
             @media(max-width:767px) {
                 .card {
                     border-radius: 0;
@@ -52,9 +60,11 @@
             }
             @media(max-width:767px) {
                 height: 414px;
+                width: 100%;
             }
             @media(max-width:413px) {
                 height: 320px;
+                width: 100% ;
             }
             .card--image {
                 position: relative;
