--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -15,6 +15,17 @@
             margin-right: -24px;
             margin-left: -24px;
         }
+        @media (max-width: 1023px) {
+            margin-left: -16px;
+            margin-right: -16px;
+            width: auto;
+            max-width: 100vw;
+        }
+        @media(max-width:767px) {
+            margin-left: -16px;
+            margin-right: -16px;
+            overflow: hidden;
+        }
 
         .card {
             flex: 1 1 auto;
