--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -3,6 +3,7 @@ html {
     flex-direction: column;
     min-height: 100%;
 }
+
 body {
     display: flex;
     flex: 1 1 auto;
@@ -25,6 +26,7 @@ body {
 * {
     outline: none !important;
 }
+
 .col, [class*='col-'] {
     @media (max-width: 1279px) {
         padding-left: 12px;
@@ -51,6 +53,18 @@ body {
     &--long {
         margin-right: -40px;
         margin-left: -40px;
+        @media (max-width: 1279px) {
+            margin-left: -36px;
+            margin-right: -36px;
+        }
+        @media(max-width: 820px) {
+            margin-left: -12px;
+            margin-right: -12px;
+        }
+        @media (max-width: 576px) {
+            margin-left: -8px;
+            margin-right: -8px;
+        }
     }
 }
 
@@ -65,6 +79,7 @@ body {
 .main-header {
     width: 100%;
     margin-bottom: 24px;
+
     h1 {
         margin-bottom: 0;
         line-height: rem(72);
@@ -72,6 +87,7 @@ body {
             line-height: 1.2;
         }
     }
+
     p {
         padding-top: 18px;
         font-size: rem(28);
