--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -10,13 +10,18 @@
         background: $white;
         border-radius: 8px;
         margin-top: -1px;
+        @media(max-width: 820px) {
+            padding: 0;
+        }
 
-        &:hover {
-            box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
-            z-index: 2;
+        @media(min-width: 821px) {
+            &:hover {
+                box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
+                z-index: 2;
 
-            .employee-content {
-                border-top-color: transparent;
+                .employee-content {
+                    border-top-color: transparent;
+                }
             }
         }
 
@@ -32,6 +37,9 @@
             width: 100%;
             border-top: 1px solid $border-10;
             padding: 25px 0 24px;
+            @media(max-width: 767px) {
+                padding: 13px 0 12px;
+            }
         }
 
         &-photo {
@@ -71,6 +79,9 @@
                 line-height: 1.2;
                 font-weight: 700;
                 color: $text-black;
+                @media(max-width: 767px) {
+                    font-size: 1rem;
+                }
 
                 &:hover {
                     text-decoration: none;
@@ -80,6 +91,9 @@
 
             &__position {
                 margin: 12px 0 8px;
+                @media(max-width: 767px) {
+                    margin: 8px 0 4px;
+                }
             }
 
             &__area {
@@ -95,7 +109,24 @@
             width: 43%;
 
             &__item {
+                display: flex;
+                justify-content: flex-start;
+                position: relative;
+                width: 100%;
+                max-width: 100%;
+                overflow: hidden;
                 margin-top: 8px;
+
+                &::after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    width: 24px;
+                    height: 100%;
+                    background: linear-gradient(to right, rgba(255, 255, 255, 0), #ffffff);
+                }
 
                 &--address {
                     address {
@@ -140,10 +171,12 @@
                     line-height: 1.14;
                     color: $text-silver;
                     margin: 0;
+                    white-space: nowrap;
 
                     &::before {
                         content: '';
                         width: 16px;
+                        min-width: 16px;
                         height: 16px;
                         background-size: contain;
                         background-repeat: no-repeat;
@@ -164,18 +197,23 @@
         background: $white;
         border-radius: 8px;
         margin-top: -1px;
+        @media(max-width: 820px) {
+            padding: 0;
+        }
 
-        &:hover {
-            cursor: pointer;
-            box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
-            z-index: 2;
+        @media(min-width: 821px) {
+            &:hover {
+                cursor: pointer;
+                box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.1);
+                z-index: 2;
 
-            .news-item__content {
-                border-top-color: transparent;
-            }
+                .news-item__content {
+                    border-top-color: transparent;
+                }
 
-            .news-item__title {
-                color: $coral;
+                .news-item__title {
+                    color: $coral;
+                }
             }
         }
 
@@ -192,6 +230,9 @@
             font-size: 1.25rem;
             line-height: 1.2;
             font-weight: 700;
+            @media(max-width: 767px) {
+                font-size: 1rem;
+            }
         }
 
         &__description {
@@ -257,6 +298,9 @@
                 font-weight: 700;
                 color: $text-black;
                 margin: 8px 0;
+                @media(max-width: 767px) {
+                    font-size: 1rem;
+                }
             }
 
             &__date {
@@ -292,6 +336,10 @@
                             background-repeat: no-repeat;
                             background-position: center center;
                             transform: translate(-50%, -50%);
+                            @media(max-width: 767px) {
+                                width: 40px;
+                                height: 40px;
+                            }
                         }
                     }
                 }
@@ -313,15 +361,45 @@
         display: flex;
         justify-content: center;
         position: relative;
+        @media(max-width: 1023px) {
+            display: block;
+        }
 
         &__row {
             margin: 32px -16px;
         }
 
-        &__select {
+        &__selects {
+            display: flex;
+            justify-content: space-between;
             position: absolute;
             top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            @media(max-width: 1022px) {
+                justify-content: flex-start;
+                position: static;
+                margin: -8px;
+                padding: 8px;
+                //overflow-x: auto;
+                //-ms-overflow-style: none;
+                //overflow: -moz-scrollbars-none;
+                //scrollbar-width: none;
+                //&::-webkit-scrollbar {
+                //    display: none;
+                //}
+            }
+        }
+
+        &__select {
             max-width: 204px;
+            @media(max-width: 1022px) {
+                margin-right: 16px;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
 
             .sorting-form__select {
                 margin-right: 0;
@@ -335,12 +413,19 @@
                 left: 0;
             }
 
-            &:last-child {
-                right: 0;
+            .data-select__dropdown {
+                right: 0 !important;
+                left: auto !important;
+                @media(max-width: 1022px) {
+                    right: auto !important;
+                    left: 0 !important;
+                }
+            }
 
-                .data-select__dropdown {
-                    right: 0 !important;
-                    left: auto !important;
+            &--tag {
+                display: none;
+                @media(max-width: 1022px) {
+                    display: block;
                 }
             }
         }
@@ -348,6 +433,9 @@
         &__links {
             display: flex;
             margin: 0 220px;
+            @media (max-width: 1022px) {
+                margin: 32px 0 0;
+            }
         }
 
         &__link {
@@ -394,6 +482,9 @@
 
         &__row {
             margin: 44px 0 26px;
+            @media(max-width: 1022px) {
+                display: none;
+            }
         }
 
         &__item {
