--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -1,5 +1,6 @@
 .results {
-    padding: 32px 0 48px;
+    padding-top: 32px;
+    padding-bottom: 48px;
 
     .employee {
         @include transition();
@@ -38,13 +39,16 @@
             border-top: 1px solid $border-10;
             padding: 25px 0 24px;
             @media(max-width: 767px) {
-                padding: 13px 0 12px;
+                padding: 17px 0 16px;
             }
         }
 
         &-photo {
             display: block;
             width: 11%;
+            @media(max-width: 767px) {
+                width: 56px;
+            }
 
             &__inner {
                 display: block;
@@ -71,6 +75,9 @@
             padding-left: 16px;
             font-size: 0.875rem;
             line-height: 1.2;
+            @media(max-width: 767px) {
+                width: calc(100% - 56px);
+            }
 
             &__link {
                 @include transition();
@@ -79,9 +86,6 @@
                 line-height: 1.2;
                 font-weight: 700;
                 color: $text-black;
-                @media(max-width: 767px) {
-                    font-size: 1rem;
-                }
 
                 &:hover {
                     text-decoration: none;
@@ -107,6 +111,9 @@
             align-items: flex-start;
             list-style: none;
             width: 43%;
+            @media(max-width: 767px) {
+                display: none;
+            }
 
             &__item {
                 display: flex;
@@ -223,6 +230,9 @@
             border-top: 1px solid $border-10;
             padding: 25px 0 24px;
             color: $text-black;
+            @media (max-width: 767px) {
+                padding: 17px 0 16px;
+            }
         }
 
         &__title {
@@ -230,9 +240,6 @@
             font-size: 1.25rem;
             line-height: 1.2;
             font-weight: 700;
-            @media(max-width: 767px) {
-                font-size: 1rem;
-            }
         }
 
         &__description {
@@ -262,6 +269,16 @@
 
         &-item {
             width: calc(50% - 12px);
+            @media(max-width: 767px) {
+                display: flex;
+                align-items: flex-start;
+                justify-content: space-between;
+                width: 100%;
+                margin-top: 24px;
+                &:first-child {
+                    margin-top: 0;
+                }
+            }
 
             &:hover {
                 text-decoration: none;
@@ -273,6 +290,11 @@
 
             &__preview {
                 width: 100%;
+                border-radius: 5px;
+                overflow: hidden;
+                @media(max-width: 767px) {
+                    width: calc(50% - 8px);
+                }
 
                 .inner {
                     position: relative;
@@ -288,6 +310,12 @@
                         max-height: 100%;
                         transform: translate(-50%, -50%);
                     }
+                }
+            }
+
+            &__text {
+                @media(max-width: 767px) {
+                    width: calc(50% - 8px);
                 }
             }
 
@@ -321,6 +349,8 @@
                 }
 
                 .media-item__preview {
+                    position: relative;
+
                     .inner {
                         &::after {
                             @include transition();
@@ -342,6 +372,22 @@
                             }
                         }
                     }
+
+                    .time {
+                        position: absolute;
+                        right: 20px;
+                        bottom: 20px;
+                        font-size: 0.75rem;
+                        line-height: 1.33;
+                        color: $white;
+                        padding: 4px 8px;
+                        border-radius: 10px;
+                        background: $text-black;
+                        @media(max-width: 767px) {
+                            right: 8px;
+                            bottom: 8px;
+                        }
+                    }
                 }
             }
         }
@@ -354,6 +400,12 @@
 
         &__row {
             margin: 48px 0 24px;
+            .btn {
+                @media(max-width: 414px) {
+                    width: 100%;
+                    max-width: 100%;
+                }
+            }
         }
     }
 
@@ -434,7 +486,15 @@
             display: flex;
             margin: 0 220px;
             @media (max-width: 1022px) {
+                width: calc(100% + 16px);
                 margin: 32px 0 0;
+                overflow-x: auto;
+                -ms-overflow-style: none;
+                overflow: -moz-scrollbars-none;
+                scrollbar-width: none;
+                &::-webkit-scrollbar {
+                    display: none;
+                }
             }
         }
 
@@ -564,6 +624,13 @@
             .text {
                 @include transition();
                 color: $text-black;
+                @media (max-width: 413px) {
+                    font-size: 0;
+                    &::before {
+                        content: attr(data-mobile-text);
+                        font-size: 1rem;
+                    }
+                }
             }
 
             .count {
