--- a/src/templates/pages/results.html
+++ b/src/templates/pages/results.html
@@ -107,7 +107,7 @@
                     <div class="results-section__top">
                         <h2 class="results-section__title">Сотрудники</h2>
                         <a href="#0" class="results-section__all">
-                            <span class="text">Показать всех</span>
+                            <span class="text" data-mobile-text="Все">Показать всех</span>
                             <span class="count">105</span>
                             <span class="arrow">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -136,7 +136,7 @@
                                 </div>
                             </a>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов<br>Виталий Николаевич</a>
+                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
                                 <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
                                 </div>
@@ -169,7 +169,7 @@
                                 </div>
                             </a>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов<br>Виталий Николаевич</a>
+                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
                                 <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
                                 </div>
@@ -202,7 +202,7 @@
                                 </div>
                             </a>
                             <div class="employee-info">
-                                <a href="profile.html" class="employee-info__link">Борисов<br>Виталий Николаевич</a>
+                                <a href="profile.html" class="employee-info__link">Борисов Виталий Николаевич</a>
                                 <div class="employee-info__position">Наладчик сварочного и газоплазморезательного
                                     оборудования
                                 </div>
@@ -236,7 +236,7 @@
                     <div class="results-section__top">
                         <h2 class="results-section__title">Новости</h2>
                         <a href="#0" class="results-section__all">
-                            <span class="text">Показать все</span>
+                            <span class="text" data-mobile-text="Все">Показать все</span>
                             <span class="count">162</span>
                             <span class="arrow">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -296,7 +296,7 @@
                     <div class="results-section__top">
                         <h2 class="results-section__title">Медиа</h2>
                         <a href="#0" class="results-section__all">
-                            <span class="text">Показать все</span>
+                            <span class="text" data-mobile-text="Все">Показать все</span>
                             <span class="count">58</span>
                             <span class="arrow">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -324,9 +324,11 @@
                                     </picture>
                                 </div>
                             </div>
-                            <div class="media-item__title">ОМК и фонд «ОМК-Участие» выиграли две премии «Инициативы»
+                            <div class="media-item__text">
+                                <div class="media-item__title">ОМК и фонд «ОМК-Участие» выиграли две премии «Инициативы»
+                                </div>
+                                <div class="media-item__date">20 фев</div>
                             </div>
-                            <div class="media-item__date">20 фев</div>
                         </a>
                         <a href="#0" class="media-item media-item--video js-media-item--video">
                             <div class="media-item__preview">
@@ -336,10 +338,13 @@
                                         <img src="img/media-preview.jpg" alt="image_alt">
                                     </picture>
                                 </div>
+                                <div class="time">0:59</div>
                             </div>
-                            <div class="media-item__title">ОМК и фонд «ОМК-Участие» выиграли две премии «Инициативы»
+                            <div class="media-item__text">
+                                <div class="media-item__title">ОМК и фонд «ОМК-Участие» выиграли две премии «Инициативы»
+                                </div>
+                                <div class="media-item__date">20 фев</div>
                             </div>
-                            <div class="media-item__date">20 фев</div>
                         </a>
                     </div>
                 </div>
