--- a/src/styles/pages/results.scss
+++ b/src/styles/pages/results.scss
@@ -400,6 +400,7 @@
 
         &__row {
             margin: 48px 0 24px;
+
             .btn {
                 @media(max-width: 414px) {
                     width: 100%;
@@ -421,26 +422,146 @@
             margin: 32px -16px;
         }
 
+        &__filters-btn {
+            @include transition();
+            display: none;
+            border: none;
+            padding: 8px 16px 8px 12px;
+            background: $white;
+            border-radius: 20px;
+            box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
+            @media (max-width: 520px) {
+                display: flex;
+                align-items: center;
+            }
+
+            &.active {
+                .count {
+                    display: block;
+                }
+            }
+
+            .icon {
+                width: 24px;
+                height: 24px;
+                background-image: url(../img/icons/results-filters.svg);
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center center;
+                margin-right: 4px;
+            }
+
+            .text {
+                font-size: 1rem;
+                line-height: 1.25;
+                color: $text-black;
+            }
+
+            .count {
+                display: none;
+                font-size: 0.875rem;
+                line-height: 1.43;
+                color: $coral;
+                margin-left: 8px;
+            }
+        }
+
         &__selects {
-            display: flex;
-            justify-content: space-between;
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
             @media(max-width: 1022px) {
-                justify-content: flex-start;
                 position: static;
                 margin: -8px;
                 padding: 8px;
-                //overflow-x: auto;
-                //-ms-overflow-style: none;
-                //overflow: -moz-scrollbars-none;
-                //scrollbar-width: none;
-                //&::-webkit-scrollbar {
-                //    display: none;
-                //}
+            }
+            @media(max-width: 520px) {
+                display: none;
+                &.mobile-show {
+                    display: block;
+                    position: fixed;
+                    z-index: 20;
+                    top: 8px;
+                    left: 8px;
+                    width: 100%;
+                    height: 100vh;
+                    padding: 0;
+                    background: $white;
+                }
+            }
+
+            .top {
+                display: none;
+                @media (max-width: 520px) {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    padding: 16px;
+                    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                }
+
+                &-header {
+                    display: flex;
+                    font-size: 1rem;
+                    line-height: 1.25;
+                    font-weight: 700;
+
+                    .count {
+                        color: $text-silver;
+                        margin-left: 8px;
+                    }
+                }
+
+                &-close {
+                    width: 32px;
+                    height: 32px;
+                    border: none;
+                    background-color: transparent;
+                    background-image: url(../img/icons/icon--close-menu.svg);
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                }
+            }
+
+            .bottom {
+
+                @media(max-width: 520px) {
+                    height: calc(100vh - 65px);
+                    padding: 32px 0;
+                    overflow-y: auto;
+                }
+
+                .selects {
+                    display: flex;
+                    justify-content: space-between;
+                    @media(max-width: 1022px) {
+                        justify-content: flex-start;
+                    }
+                    @media(max-width: 520px) {
+                        display: block;
+                    }
+                }
+
+                .buttons {
+                    display: none;
+                    @media (max-width: 520px) {
+                        display: block;
+                        width: calc(100% - 64px);
+                        max-width: 350px;
+                        margin: 88px auto 0;
+                        .btn {
+                            width: 100%;
+                            margin-top: 16px;
+
+                            &:first-child {
+                                margin-top: 0;
+                            }
+                        }
+                    }
+                }
             }
         }
 
@@ -452,12 +573,21 @@
                     margin-right: 0;
                 }
             }
-
-            .sorting-form__select {
-                margin-right: 0;
-
-                .btn {
-                    max-width: 204px;
+            @media(max-width: 520px) {
+                position: relative;
+                width: calc(100% - 64px);
+                max-width: 350px;
+                margin: 16px auto 0;
+                &:first-child {
+                    margin-top: 0;
+                    z-index: 32;
+                }
+                &:nth-child(2) {
+                    z-index: 31;
+                }
+                &:last-child {
+                    margin-right: auto;
+                    z-index: 30;
                 }
             }
 
@@ -465,14 +595,124 @@
                 left: 0;
             }
 
-            .data-select__dropdown {
-                right: 0 !important;
-                left: auto !important;
-                @media(max-width: 1022px) {
-                    right: auto !important;
-                    left: 0 !important;
+            .mobile-title {
+                display: none;
+                @media(max-width: 520px) {
+                    display: block;
+                    position: absolute;
+                    z-index: 20;
+                    top: 12px;
+                    left: 16px;
+                    font-size: 0.8125rem;
+                    line-height: 1.23;
+                    color: $text-silver;
                 }
             }
+
+            .sorting-form__select {
+                margin-right: 0;
+                @media(max-width: 520px) {
+                    width: 100% !important;
+                }
+
+                .btn {
+                    max-width: 204px;
+                    @media(max-width: 520px) {
+                        width: 100%;
+                        max-width: 100%;
+                        border: 1px solid $border-10;
+                        padding: 32px 52px 12px 16px;
+                        border-radius: 5px;
+                        box-shadow: none;
+                        &:hover, &:active {
+                            transform: none;
+                        }
+                        &::after {
+                            top: 50%;
+                            right: 16px;
+                            transform: translateY(-50%) rotate(90deg);
+                            opacity: .4;
+                        }
+                    }
+                }
+
+                select {
+                    display: none !important;
+                    pointer-events: none;
+                }
+            }
+
+            .data-select {
+                &__result {
+                    width: 100%;
+                    max-width: 100%;
+                    border: 1px solid $border-10;
+                    padding: 32px 52px 12px 16px;
+                    border-radius: 5px;
+                    box-shadow: none;
+                    text-align: left;
+
+                    &:hover, &:active {
+                        transform: none;
+                    }
+
+                    &::after {
+                        top: 50%;
+                        right: 16px;
+                        transform: translateY(-50%) rotate(90deg);
+                        opacity: .4;
+                    }
+                }
+
+                &__clear {
+                    top: 50%;
+                    right: 16px;
+                    transform: translateY(-50%);
+                }
+
+                &__btn {
+                    @media(max-width: 520px) {
+                        width: 100%;
+                        max-width: 100%;
+                        border: 1px solid $border-10;
+                        padding: 32px 52px 12px 16px;
+                        border-radius: 5px;
+                        box-shadow: none;
+                        text-align: left;
+
+                        &:hover, &:active {
+                            transform: none;
+                        }
+
+                        &::after {
+                            top: 50%;
+                            right: 16px;
+                            transform: translateY(-50%) rotate(90deg);
+                            opacity: .4;
+                        }
+                    }
+                }
+
+                &__dropdown {
+                    right: 0 !important;
+                    left: auto !important;
+                    @media(max-width: 1022px) {
+                        right: auto !important;
+                        left: 0 !important;
+                    }
+                    @media(max-width: 520px) {
+                        width: auto;
+                    }
+
+                    .datepicker--cell-day {
+                        @media (max-width: 520px) {
+                            width: 14.28571%;
+                            height: 32px;
+                        }
+                    }
+                }
+            }
+
 
             &--tag {
                 display: none;
@@ -486,8 +726,9 @@
             display: flex;
             margin: 0 220px;
             @media (max-width: 1022px) {
-                width: calc(100% + 16px);
-                margin: 32px 0 0;
+                width: calc(100% + 32px);
+                margin: 32px 0 0 -16px;
+                padding-left: 16px;
                 overflow-x: auto;
                 -ms-overflow-style: none;
                 overflow: -moz-scrollbars-none;
