--- a/src/templates/pages/results.html
+++ b/src/templates/pages/results.html
@@ -8,34 +8,79 @@
         </div>
         <div class="row results-nav__row">
             <div class="col-12">
+                <button type="button" class="results-nav__filters-btn js-results-nav__filters-btn">
+                    <span class="icon"></span>
+                    <span class="text">Фильтры</span>
+                    <span class="count">2</span>
+                </button>
                 <div class="results-nav">
-                    <div class="results-nav__selects">
-                        <div class="results-nav__select">
-                            <form action="#0">
-                                {% include 'select/select.html' %}
-                            </form>
+                    <form action="#0" class="js-results-nav-form">
+                        <div class="results-nav__selects js-results-nav__selects">
+                            <div class="top">
+                                <div class="top-header">
+                                    <div class="name">Фильтры</div>
+                                </div>
+                                <button type="button" class="top-close js-top-close"></button>
+                            </div>
+
+                            <div class="bottom">
+
+                                <div class="selects">
+                                    <div class="results-nav__select js-results-nav__select">
+                                        <div class="mobile-title">Площадка</div>
+                                        <select name="" id="" class="selectpicker sorting-form__select select-js">
+                                            <option value="">Все площадки</option>
+                                            <option value="">Альметьевск</option>
+                                            <option value="">Москва</option>
+                                            <option value="">Челябинск</option>
+                                            <option value="">Уфа</option>
+                                            <option value="">Благовещенск</option>
+                                            <option value="">Чусовой</option>
+                                            <option value="">Выкса</option>
+                                        </select>
+                                    </div>
+                                    <div class="results-nav__select js-results-nav__select">
+                                        <div class="mobile-title">Дата</div>
+                                        <div class="data-select">
+                                            <button class="data-select__btn btn datapicker-trigger-js" type="button">
+                                                Дата
+                                            </button>
+                                            <div class="data-select__result ">
+                                                <input type="text" hidden readonly
+                                                       class="date-select__input datapicker-result-js">
+                                                <div class="data-select__fake-input datapicker-fake-js"></div>
+                                                <button type="button"
+                                                        class="data-select__clear btn datapicker-clear-js"></button>
+                                            </div>
+                                            <div class="data-select__dropdown">
+                                                <div class="data-select__item datapicker-js"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="results-nav__select results-nav__select--tag js-results-nav__select">
+                                        <div class="mobile-title">Тег</div>
+                                        <select name="" id="" class="selectpicker sorting-form__select select-js">
+                                            <option value="">Тег</option>
+                                            <option value="">Новость</option>
+                                            <option value="">Мероприятие</option>
+                                            <option value="">Конкурс</option>
+                                            <option value="">Результаты работы</option>
+                                            <option value="">Интервью</option>
+                                            <option value="">Лонгрид</option>
+                                            <option value="">СМИ</option>
+                                            <option value="">Важное сообщение</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="buttons">
+                                    <button type="submit" class="btn btn--primary">Применить</button>
+                                    <button type="reset" class="btn btn--secondary">Сбросить фильтры</button>
+                                </div>
+
+                            </div>
                         </div>
-                        <div class="results-nav__select">
-                            <form action="#0">
-                                {% include 'dataselect/dataselect.html' %}
-                            </form>
-                        </div>
-                        <div class="results-nav__select results-nav__select--tag">
-                            <form action="#0">
-                                <select name="" id="" class="selectpicker sorting-form__select select-js">
-                                    <option value="">Тег</option>
-                                    <option value="">Новость</option>
-                                    <option value="">Мероприятие</option>
-                                    <option value="">Конкурс</option>
-                                    <option value="">Результаты работы</option>
-                                    <option value="">Интервью</option>
-                                    <option value="">Лонгрид</option>
-                                    <option value="">СМИ</option>
-                                    <option value="">Важное сообщение</option>
-                                </select>
-                            </form>
-                        </div>
-                    </div>
+                    </form>
 
                     <div class="results-nav__links">
                         <a href="#0" class="results-nav__link active">
