profile-edit modal

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -21,3 +21,4 @@
 @import 'modules/unknown/unknown';
 @import 'modules/header-search/header-search';
 @import 'modules/imagePopup/imagePopup';
+@import 'modules/profile-edit/profile-edit';
