--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -22,3 +22,4 @@
 @import 'modules/header-search/header-search';
 @import 'modules/imagePopup/imagePopup';
 @import 'modules/profile-edit/profile-edit';
+@import 'modules/regards-modal/regards-modal';
