--- a/src/templates/pages/profile.html
+++ b/src/templates/pages/profile.html
@@ -181,22 +181,27 @@
                                 <img src="img/icons/profile-regard-1.svg" alt="alt" class="regards-list__img">
                             </li>
                             <li class="regards-list__item">
+                                <div class="regards-list__description">Лучший мастер смены</div>
                                 <img src="img/icons/profile-regard-2.svg" alt="alt">
                             </li>
                             <li class="regards-list__item">
+                                <div class="regards-list__description">Лучший мастер смены</div>
                                 <img src="img/icons/profile-regard-3.svg" alt="alt">
                             </li>
                             <li class="regards-list__item">
+                                <div class="regards-list__description">Лучший мастер смены</div>
                                 <img src="img/icons/profile-regard-4.svg" alt="alt">
                             </li>
                             <li class="regards-list__item">
+                                <div class="regards-list__description">Лучший мастер смены</div>
                                 <img src="img/icons/profile-regard-5.svg" alt="alt">
                             </li>
                             <li class="regards-list__item">
+                                <div class="regards-list__description">Лучший мастер смены</div>
                                 <img src="img/icons/profile-regard-6.svg" alt="alt">
                             </li>
                         </ul>
-                        <a href="#0" class="regards__all">Все награды</a>
+                        <a href="#0" class="regards__all js-regards__all">Все награды</a>
                     </div>
                     <!-- else -->
                     <div class="profile-regards__none">Нет наград</div>
@@ -214,4 +219,5 @@
     </div>
 
     {% include 'profile-edit/profile-edit.html' %}
+    {% include 'regards-modal/regards-modal.html' %}
 {% endblock %}
