--- a/src/blocks/modules/universal-form/universal-form.scss
+++ b/src/blocks/modules/universal-form/universal-form.scss
@@ -65,11 +65,13 @@
 
             .btn {
                 display: flex;
-                align-items: flex-start;
+                align-items: center;
                 justify-content: flex-start;
                 max-width: 348px;
                 margin-right: 16px;
                 padding-right: 16px;
+                padding-top: 11px;
+                padding-bottom: 11px;
                 padding-left: 12px;
                 text-align: left;
                 @media (max-width: 767px) {
@@ -83,7 +85,7 @@
 
                 .icon {
                     display: block;
-                    margin-right: 4px;
+                    margin-right: 8px;
                     flex-shrink: 0;
                 }
             }
@@ -113,7 +115,7 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: contain;
-                background-color: none;
+                background-color: $white;
                 border: none;
             }
         }
