--- a/src/styles/base/_inputs.scss
+++ b/src/styles/base/_inputs.scss
@@ -59,6 +59,9 @@
             &:hover {
                 border-color: $border-20;
             }
+            &:focus {
+                background-color: $white;
+            }
         }
     }
     &__error {
