--- a/src/styles/pages/news.scss
+++ b/src/styles/pages/news.scss
@@ -24,7 +24,6 @@
         @media(max-width:767px) {
             margin-left: -16px;
             margin-right: -16px;
-            overflow: hidden;
         }
 
         .card {
@@ -37,6 +36,15 @@
                 @media (max-width: 1279px) {
                     height: 360px;
                     margin-bottom: 24px;
+                }
+                @media (max-width: 414px) {
+                    height: 414px;
+                    border-radius: 0;
+                    margin-left: -16px;
+                    margin-right: -16px;
+                }
+                @media (max-width: 320px) {
+                    height: 288px;
                 }
             }
         }
@@ -60,23 +68,53 @@
             @media(max-width: 1023px) {
                 height: 414px;
             }
+            @media (max-width: 414px) {
+                width: 100vw;
+                max-width: 100vw;
+                height: auto;
+                padding: 0;
+                margin-left: -24px;
+                margin-right: 0;
+            }
 
             .swiper-container {
                 height: 100%;
                 @media(max-width: 1023px) {
                     padding-bottom: 24px;
                 }
+                @media (max-width: 414px) {
+                    height: auto;
+                }
+                @media (max-width: 320px) {
+                    height: auto;
+                }
             }
 
             .swiper-wrapper {
                 height: 100%;
+                @media (max-width: 414px) {
+                    height: auto;
+                }
+                @media (max-width: 320px) {
+                    height: auto;
+                }
             }
 
             .swiper-slide {
                 height: 100%;
+                @media (max-width: 414px) {
+                    height: 414px;
+                }
+                @media (max-width: 320px) {
+                    height: 288px;
+                }
 
                 .card {
                     height: 100%;
+                    @media (max-width: 414px) {
+                        border-radius: 0;
+                    }
+
                     &:hover {
                         transform: none;
                     }
