--- a/src/styles/pages/text-page.scss
+++ b/src/styles/pages/text-page.scss
@@ -64,6 +64,7 @@
                 margin: 0 16px 16px;
                 font-size: rem(16);
                 line-height: 1.25;
+                font-weight: $font-weight-light;
                 color: $text-silver;
                 @media (max-width: 767px) {
                     margin: 0 16px 0 0;
@@ -89,12 +90,13 @@
 
                 .btn {
                     min-width: auto;
-                    padding-left: 0;
-                    padding-right: 0;
+                    padding: 0;
                     background: none;
-                    font-weight: $font-weight-normal;
+                    font-size: rem(16);
+                    font-weight: $font-weight-light;
                     line-height: 1.25;
                     color: $text-silver;
+                    vertical-align: middle;
                 }
 
                 &.share {
@@ -193,7 +195,11 @@
 
             .btn {
                 display: inline-block;
-                padding-bottom: 8px;
+                padding-top: 12px;
+                padding-bottom: 12px;
+                .btn__icon--right {
+                    margin-top: -.25rem;
+                }
             }
         }
     }
@@ -204,16 +210,23 @@
 
         .tags {
             width: 100%;
-            margin-bottom: 24px;
+            margin-bottom: 16px;
             &__row {
                 justify-content: flex-start;
                 max-width: none;
+                @media (max-width: 1279px) {
+                    margin-left: 0;
+                    margin-right: 0;
+                }
                 @media (max-width: 767px) {
                     width: auto;
                 }
             }
 
             &__item {
+                &:first-of-type {
+                    margin-left: 0;
+                }
                 @media (max-width: 767px) {
                     margin: 0 4px 8px 0;
                     &:last-of-type {
@@ -248,6 +261,7 @@
                 margin-right: 32px;
                 font-size: rem(16);
                 line-height: 1.25;
+                font-weight: $font-weight-light;
                 color: $text-silver;
                 display: flex;
                 align-items: center;
@@ -267,12 +281,13 @@
 
                 .btn {
                     min-width: auto;
-                    padding-left: 0;
-                    padding-right: 0;
+                    padding: 0;
                     background: none;
-                    font-weight: $font-weight-normal;
+                    font-size: rem(16);
+                    font-weight: $font-weight-light;
                     line-height: 1.25;
                     color: $text-silver;
+                    vertical-align: middle;
                 }
             }
         }
