--- a/src/templates/pages/text-page.html
+++ b/src/templates/pages/text-page.html
@@ -17,10 +17,7 @@
                     <div class="article__header-info-item"><i class="icon icon--view-gray"></i>104</div>
                     <div class="article__header-info-item"><i class="icon icon--comment-gray"></i>32</div>
                     <div class="article__header-info-item share">
-                        <button class="btn">
-                            <i class="icon icon--share-gray"></i>
-                            Поделиться
-                        </button>
+                        <button class="btn"><i class="icon icon--share-gray"></i>Поделиться</button>
                     </div>
                 </div>
             </div>
@@ -1338,7 +1335,7 @@
         </div>
 
         <div class="row justify-content-center article__footer">
-            <div class="col-md-8">
+            <div class="col-xl-8 col-lg-10">
                 <div class="tags">
                     <div class="row tags__row">
                         <a href="#0" class="tags__item">Лонгрид</a>
