--- a/src/blocks/modules/comments/comments.scss
+++ b/src/blocks/modules/comments/comments.scss
@@ -1,5 +1,10 @@
 .comments {
     width: 100%;
+    .btn {
+        padding-top: 13px;
+        padding-bottom: 13px;
+        font-weight: $font-weight-light;
+    }
 
     &__header {
         font-size: rem(32);
@@ -60,6 +65,7 @@
                 width: 24px;
                 height: 24px;
                 border: none;
+                padding: 0;
                 background-color: transparent;
 
                 .icon {
@@ -71,7 +77,7 @@
     }
 
     &__list {
-        margin-bottom: 64px;
+        margin-bottom: 32px;
     }
 
     &__item {
@@ -127,7 +133,7 @@
             }
 
             .date {
-                font-size: rem(16);
+                font-size: rem(14);
                 line-height: 1.25;
                 color: $text-silver;
             }
@@ -176,6 +182,7 @@
             font-size: rem(14);
             line-height: 1.43;
             color: $text-silver;
+            font-weight: $font-weight-light;
         }
 
         &-more {
