--- a/src/blocks/modules/galleryThumbs/galleryThumbs.scss
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.scss
@@ -7,17 +7,13 @@
         .swiper-button-prev {
             left: 16px;
             pointer-events: all;
-            @media (max-width: 1023px) {
-                opacity: 1;
-            }
+            opacity: 1;
         }
 
         .swiper-button-next {
             right: 16px;
             pointer-events: all;
-            @media (max-width: 1023px) {
-                opacity: 1;
-            }
+            opacity: 1;
         }
 
         .thumbs-slider__main {
@@ -52,18 +48,13 @@
         pointer-events: none;
 
         &-prev {
-            left: -80px;
-            @media (max-width: 1023px) {
-                opacity: 0;
-                left: 0;
-            }
+            opacity: 0;
+            left: 0;
         }
         &-next {
-            right: -80px;
-            @media (max-width: 1023px) {
-                opacity: 0;
-                right: 0;
-            }
+
+            opacity: 0;
+            right: 0;
         }
     }
 
@@ -128,7 +119,7 @@
                 top: 50%;
                 left: 50%;
                 max-width: 100%;
-                max-height: 100%;
+                max-height: calc(100% + 2px);
                 margin: auto;
                 transform: translate(-50%, -50%);
             }
@@ -156,6 +147,7 @@
             height: auto;
             padding-bottom: 0;
             cursor: pointer;
+            border-radius: 0;
             &::before {
                 content: none;
             }
@@ -187,7 +179,7 @@
             overflow: hidden;
             padding-bottom: 66.3%;
             background-color: $text-silver;
-            
+
             img {
                 display: block;
                 position: absolute;
@@ -250,7 +242,7 @@
 
         .thumbs-slider__description {
             border: solid 1px $border-10;
-            padding: 12px 20px 12px 20px;
+            padding: 12px 20px 16px 20px;
             border-radius: 0 0 5px 5px;
         }
     }
