--- a/src/blocks/modules/likeItem/likeItem.scss
+++ b/src/blocks/modules/likeItem/likeItem.scss
@@ -28,7 +28,7 @@
         .icon {
             width: 24px;
             height: 24px;
-            margin: 0;
+            margin: 0 !important;
         }
     }
 
@@ -36,6 +36,7 @@
         margin-right: 12px;
         font-size: rem(16);
         line-height: 1.25;
+        font-weight: $font-weight-light;
         color: $text-silver;
 
         &-output {
