--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -5,7 +5,7 @@
     border: none;
     padding: rem(12) rem(16) rem(16);
     border-radius: 5px;
-    font-size: rem(16px);
+    font-size: rem(16);
     line-height: 1.25;
 
     &:active {
