--- a/src/styles/base/_table.scss
+++ b/src/styles/base/_table.scss
@@ -31,6 +31,12 @@
         border-bottom: 1px solid $border-10;
         padding: 16px 8px;
         vertical-align: top;
+        &:first-child {
+            padding-left: 0;
+        }
+        &:last-child {
+            padding-right: 0;
+        }
         span {
             display: block;
             width: 100%;
@@ -52,6 +58,15 @@
     overflow: hidden;
     border: 1px solid $border-10;
     border-collapse: separate;
+
+    td, th {
+        &:first-child {
+            padding-left: 16px;
+        }
+        &:last-child {
+            padding-right: 16px;
+        }
+    }
 }
 
 .table-striped {
@@ -65,6 +80,12 @@
 
     th, td {
         border-color: $silver-dark;
+        &:first-child {
+            padding-left: 16px;
+        }
+        &:last-child {
+            padding-right: 16px;
+        }
     }
 }
 
@@ -94,6 +115,14 @@
 
     th, td, thead th {
         border-color: rgba(144, 144, 153, 0.3);
+    }
+    td, th {
+        &:first-child {
+            padding-left: 16px;
+        }
+        &:last-child {
+            padding-right: 16px;
+        }
     }
 
 
