profile active modal

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -23,3 +23,4 @@
 @import 'modules/imagePopup/imagePopup';
 @import 'modules/profile-edit/profile-edit';
 @import 'modules/regards-modal/regards-modal';
+@import 'modules/profile-active-modal/profile-active-modal';
