--- a/src/templates/pages/profile.html
+++ b/src/templates/pages/profile.html
@@ -220,4 +220,5 @@
 
     {% include 'profile-edit/profile-edit.html' %}
     {% include 'regards-modal/regards-modal.html' %}
+    {% include 'profile-active-modal/profile-active-modal.html' %}
 {% endblock %}
